language/move-lang/tests/move_check/typing/binary_leq_invalid.exp
error: 

   ┌── tests/move_check/typing/binary_leq_invalid.move:8:9 ───
   │
 8 │         false <= true;
   │         ^^^^^ Invalid argument to '<='
   ·
 8 │         false <= true;
   │         ----- Found: 'bool'. But expected: 'u8', 'u64', 'u128'
   │

error: 

   ┌── tests/move_check/typing/binary_leq_invalid.move:8:18 ───
   │
 8 │         false <= true;
   │                  ^^^^ Invalid argument to '<='
   ·
 8 │         false <= true;
   │         ----- Found: 'bool'. But expected: 'u8', 'u64', 'u128'
   │

error: 

   ┌── tests/move_check/typing/binary_leq_invalid.move:9:14 ───
   │
 9 │         1 <= false;
   │              ^^^^^ Incompatible arguments to '<='
   ·
 9 │         1 <= false;
   │         - The type: integer
   ·
 9 │         1 <= false;
   │              ----- Is not compatible with: 'bool'
   │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:10:9 ───
    │
 10 │         false <= 1;
    │         ^^^^^ Invalid argument to '<='
    ·
 10 │         false <= 1;
    │         ----- Found: 'bool'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:10:18 ───
    │
 10 │         false <= 1;
    │                  ^ Incompatible arguments to '<='
    ·
 10 │         false <= 1;
    │                  - The type: integer
    ·
 10 │         false <= 1;
    │         ----- Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:10:18 ───
    │
 10 │         false <= 1;
    │                  ^ Invalid argument to '<='
    ·
 10 │         false <= 1;
    │         ----- Found: 'bool'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:11:9 ───
    │
 11 │         0x0 <= 0x1;
    │         ^^^ Invalid argument to '<='
    ·
 11 │         0x0 <= 0x1;
    │         --- Found: 'address'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:11:16 ───
    │
 11 │         0x0 <= 0x1;
    │                ^^^ Invalid argument to '<='
    ·
 11 │         0x0 <= 0x1;
    │         --- Found: 'address'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:12:20 ───
    │
 12 │         (0: u8) <= (1: u128);
    │                    ^^^^^^^^^ Incompatible arguments to '<='
    ·
 12 │         (0: u8) <= (1: u128);
    │             -- The type: 'u8'
    ·
 12 │         (0: u8) <= (1: u128);
    │                        ---- Is not compatible with: 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:13:9 ───
    │
 13 │         r <= r;
    │         ^ Invalid argument to '<='
    ·
  7 │     fun t0(x: u64, r: R, s: S) {
    │                       - Found: '0x8675309::M::R'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:13:14 ───
    │
 13 │         r <= r;
    │              ^ Invalid argument to '<='
    ·
  7 │     fun t0(x: u64, r: R, s: S) {
    │                       - Found: '0x8675309::M::R'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:14:9 ───
    │
 14 │         s <= s;
    │         ^ Invalid argument to '<='
    ·
  7 │     fun t0(x: u64, r: R, s: S) {
    │                             - Found: '0x8675309::M::S'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:14:14 ───
    │
 14 │         s <= s;
    │              ^ Invalid argument to '<='
    ·
  7 │     fun t0(x: u64, r: R, s: S) {
    │                             - Found: '0x8675309::M::S'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:15:9 ───
    │
 15 │         0 <= 1 <= 2;
    │         ^^^^^^ Invalid argument to '<='
    ·
 15 │         0 <= 1 <= 2;
    │         ------ Found: 'bool'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:15:19 ───
    │
 15 │         0 <= 1 <= 2;
    │                   ^ Incompatible arguments to '<='
    ·
 15 │         0 <= 1 <= 2;
    │                   - The type: integer
    ·
 15 │         0 <= 1 <= 2;
    │         ------ Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:15:19 ───
    │
 15 │         0 <= 1 <= 2;
    │                   ^ Invalid argument to '<='
    ·
 15 │         0 <= 1 <= 2;
    │         ------ Found: 'bool'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:16:15 ───
    │
 16 │         (1 <= false) && (0x0 <= 0);
    │               ^^^^^ Incompatible arguments to '<='
    ·
 16 │         (1 <= false) && (0x0 <= 0);
    │          - The type: integer
    ·
 16 │         (1 <= false) && (0x0 <= 0);
    │               ----- Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:16:26 ───
    │
 16 │         (1 <= false) && (0x0 <= 0);
    │                          ^^^ Invalid argument to '<='
    ·
 16 │         (1 <= false) && (0x0 <= 0);
    │                          --- Found: 'address'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:16:33 ───
    │
 16 │         (1 <= false) && (0x0 <= 0);
    │                                 ^ Incompatible arguments to '<='
    ·
 16 │         (1 <= false) && (0x0 <= 0);
    │                                 - The type: integer
    ·
 16 │         (1 <= false) && (0x0 <= 0);
    │                          --- Is not compatible with: 'address'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:16:33 ───
    │
 16 │         (1 <= false) && (0x0 <= 0);
    │                                 ^ Invalid argument to '<='
    ·
 16 │         (1 <= false) && (0x0 <= 0);
    │                          --- Found: 'address'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:17:9 ───
    │
 17 │         () <= ();
    │         ^^ Invalid argument to '<='
    ·
 17 │         () <= ();
    │         -- Found: '()'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:17:15 ───
    │
 17 │         () <= ();
    │               ^^ Invalid argument to '<='
    ·
 17 │         () <= ();
    │         -- Found: '()'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:18:14 ───
    │
 18 │         1 <= ();
    │              ^^ Incompatible arguments to '<='
    ·
 18 │         1 <= ();
    │         - The type: integer
    ·
 18 │         1 <= ();
    │              -- Is not compatible with: '()'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:19:9 ───
    │
 19 │         (0, 1) <= (0, 1, 2);
    │         ^^^^^^ Invalid argument to '<='
    ·
 19 │         (0, 1) <= (0, 1, 2);
    │         ------ Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:19:19 ───
    │
 19 │         (0, 1) <= (0, 1, 2);
    │                   ^^^^^^^^^ Incompatible arguments to '<='
    ·
 19 │         (0, 1) <= (0, 1, 2);
    │         ------ The type: '({integer}, {integer})'
    ·
 19 │         (0, 1) <= (0, 1, 2);
    │                   --------- Is not compatible with: '({integer}, {integer}, {integer})'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:19:19 ───
    │
 19 │         (0, 1) <= (0, 1, 2);
    │                   ^^^^^^^^^ Invalid argument to '<='
    ·
 19 │         (0, 1) <= (0, 1, 2);
    │         ------ Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:20:9 ───
    │
 20 │         (1, 2) <= (0, 1);
    │         ^^^^^^ Invalid argument to '<='
    ·
 20 │         (1, 2) <= (0, 1);
    │         ------ Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_leq_invalid.move:20:19 ───
    │
 20 │         (1, 2) <= (0, 1);
    │                   ^^^^^^ Invalid argument to '<='
    ·
 20 │         (1, 2) <= (0, 1);
    │         ------ Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'
    │

